--- a/README.textile
+++ b/README.textile
@@ -23,6 +23,7 @@ Currently included recipes in this gem:
  * DelayedJob Worker
  * Whenever Cron Scheduling
  * Aptitude Package Management
+ * Gitosis Git Repository Hosting 
  
 Check out the USAGE section below for specific tasks included in the recipes. 
 
@@ -45,7 +46,8 @@ Then, include into your @deploy.rb@ configuration file for Capistrano:
   require 'cap_recipes/tasks/memcache'
   require 'cap_recipes/tasks/passenger'
   require 'cap_recipes/tasks/thinking_sphinx'
-  # or ruby, rubygems, rails, apache, delayed_job, juggernaut, backgroundrb, aptitude, whenever
+  require 'cap_recipes/tasks/rails'
+  # or ruby, rubygems, apache, delayed_job, juggernaut, backgroundrb, aptitude, gitosis, whenever
 
   # OR
   # only use managing tasks:
@@ -314,6 +316,20 @@ hooks.rb
 <pre><code>
 after "deploy:restart", "memcache:restart" # clear cache after updating code
 </code></pre>
+
+h3. Gitosis
+
+These recipes are for installing Gitosis Git Repository Hosting
+
+h4. Configuration
+
+  * None required
+  
+h4. Tasks
+
+install.rb
+
+  * gitosis:install
 
 h3. Whenever
 
